[gd_scene load_steps=15 format=3 uid="uid://d2uk2xiqpck2v"]

[ext_resource type="Script" path="res://addons/godot-xr-tools/staging/scene_base.gd" id="1_v4p7m"]
[ext_resource type="Script" path="res://assets/scripts/game_manager.gd" id="2_xp1kf"]
[ext_resource type="PackedScene" uid="uid://k82wb6l85mwt" path="res://assets/prefabs/player/xr_camera_rig_combat.tscn" id="3_eaxon"]
[ext_resource type="Script" path="res://assets/scripts/audio/bgm_manager.gd" id="3_kgnjx"]
[ext_resource type="Resource" uid="uid://parg0q45o20j" path="res://assets/audio/bgm/elec_ambient_zen/elec_ambient_zen.tres" id="4_w4eue"]
[ext_resource type="Resource" uid="uid://b8horq8clu7cf" path="res://assets/audio/bgm/synthwave_blue_sunset/synthwave_blue_sunset.tres" id="5_c5lku"]
[ext_resource type="PackedScene" uid="uid://c12yha7ag7sbx" path="res://assets/prefabs/player/ship.tscn" id="5_xki2l"]
[ext_resource type="PackedScene" uid="uid://dkio6gw8dd46u" path="res://assets/prefabs/ui/viewport_game_over.tscn" id="6_2tx8f"]
[ext_resource type="PackedScene" uid="uid://dbdultc8sgvx5" path="res://assets/prefabs/audio/announcer.tscn" id="6_m6mut"]
[ext_resource type="PackedScene" uid="uid://ur217qymsbc" path="res://assets/prefabs/ui/viewport_pause.tscn" id="7_nge64"]
[ext_resource type="PackedScene" uid="uid://ld3e3ild5far" path="res://assets/prefabs/ui/viewport_level_complete.tscn" id="8_c14nl"]
[ext_resource type="PackedScene" uid="uid://d2lli8sr4ipqb" path="res://assets/prefabs/combat_zones/combat_zone_manager.tscn" id="9_ssecv"]
[ext_resource type="Script" path="res://assets/scripts/combat/combat_zone/level_config.gd" id="10_eq1ch"]

[sub_resource type="Resource" id="Resource_4fkhu"]
script = ExtResource("10_eq1ch")
spawnable_zones = Array[PackedScene]([])

[node name="SceneBase" type="Node3D"]
script = ExtResource("1_v4p7m")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_xp1kf")

[node name="LevelFailedTimer" type="Timer" parent="GameManager"]
process_mode = 3
one_shot = true

[node name="OvaniPlayer" type="Node" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("3_kgnjx")
pause_volume = -10.0
level_failed_bgm = ExtResource("4_w4eue")
level_failed_intensity = 0.4
level_complete_bgm = ExtResource("5_c5lku")
PlayInEditor = true
Bus = &"BGM"
LoopQueue = true

[node name="Announcer" parent="." instance=ExtResource("6_m6mut")]

[node name="Ready" parent="Announcer" index="1"]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0, 2, -4)

[node name="go" parent="Announcer" index="2"]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0, 2, -4)

[node name="XROrigin3D" parent="." instance=ExtResource("3_eaxon")]

[node name="Ship" parent="." instance=ExtResource("5_xki2l")]
transform = Transform3D(1, 0, -2.13163e-14, 0, 1, 0, 2.13163e-14, 0, 1, -2.38419e-07, 1.0249, -0.951186)
move_speed = 2.0

[node name="ViewportGameOver" parent="." instance=ExtResource("6_2tx8f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36, -3.015)
visible = false

[node name="ViewportPause" parent="." instance=ExtResource("7_nge64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3.38116)
visible = false

[node name="ViewportLevelComplete" parent="." instance=ExtResource("8_c14nl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.117, -3.865)
visible = false

[node name="BaseLevelEnv" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00274301, 0.016634, -0.0049181)

[node name="WorldEnvironment" type="WorldEnvironment" parent="BaseLevelEnv"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="BaseLevelEnv"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 1.02516, 4.02194, -7.79253)
light_color = Color(0.991879, 0.761747, 0.551114, 1)
light_energy = 0.849
light_bake_mode = 1
directional_shadow_mode = 0

[node name="CombatZoneManager" parent="." node_paths=PackedStringArray("spawn_marker", "despawn_marker", "xr_rig_marker") instance=ExtResource("9_ssecv")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
spawn_marker = NodePath("SpawnMarker")
despawn_marker = NodePath("DespawnMarker")
xr_rig_marker = NodePath("XRRigMarker")
level_config = SubResource("Resource_4fkhu")
move_speed = 5

[node name="DespawnMarker" type="Marker3D" parent="CombatZoneManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="SpawnMarker" type="Marker3D" parent="CombatZoneManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 149)

[node name="XRRigMarker" type="Marker3D" parent="CombatZoneManager"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[connection signal="on_death" from="Ship" to="GameManager" method="_on_ship_on_death"]
[connection signal="on_level_end" from="CombatZoneManager" to="GameManager" method="_on_combat_zone_manager_on_level_end"]

[editable path="Announcer"]
